--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
       <div class="board">
         
       </div>
+      <div class="modal">
+        <div class="start-game">
+          <h3>Welcome to the Snake Game</h3>
+          <button class="btn btn-start">Start Game</button>
+        </div>
+         <div class="game-over">
+          <h3>Game Over</h3>
+          <button class="btn btn-restart">Restart Game</button>
+        </div>
+      </div>
     </section>
   </main>
   <script src="script.js"></script>
